--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height:100%;
-    overflow: scroll;
+    overflow-y: scroll;
 
+}
+::-webkit-scrollbar{
+    display: none;
 }
