--- a/src/Components/Player/Player.css
+++ b/src/Components/Player/Player.css
@@ -1,24 +1,69 @@
-.player{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 2rem;
-border: 1px solid #ccc;
-border-radius: 1rem;
-padding: 1rem;
-width: 80%;
-}
-.uploadSection{
-}
-.listSection{
-    width: 100%;
+.playerBody {
     display: flex;
     justify-content: center;
+    gap: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    padding: 1rem;
+    width: 80vw;
+    height: 80vh;
 }
 
-.playlistTile{
+.trackSection {
+    flex: 0.25;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
 
+.uploadSection {
+    flex: 0.25;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.listSection {
+    flex: 0.75;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.4rem;
+    overflow-y: scroll;
+}
+
+
+.playerSection {
+    flex: 0.75;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    gap: 0.5rem;
+}
+
+.trackImage {
+    overflow: hidden;
+    flex: 0.90;
+    height: 80%; 
+    width: 100%;
+    border-radius: 0.5rem;
+    background-image: url('./image1.png'); /* Path to your image */
+    background-size: cover; /* Make sure the image covers the entire area */
+    background-position: center; /* Center the image */
+}
+
+.player {
+    flex: 0.10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.audioPlayer{
+    width: 100%;
+    height: 100%;
 }
